@@ -223,7 +223,11 @@ Suppose that $\dimension{U}=m$ and $\dimension{V}=t$.  Then $U$ has a basis $B$ 
 </statement>
 
 <proof>
-<p>We give a proof by contradiction (<acroref type="technique" acro="CD" />).  Suppose to the contrary that $U\neq V$.  Since $U\subseteq V$, there must be a vector $\vect{v}$ such that $\vect{v}\in V$ and $\vect{v}\not\in U$.  Let $B=\set{\vectorlist{u}{t}}$ be a basis for $U$.  Then, by <acroref type="theorem" acro="ELIS" />, the set $C=B\cup\set{\vect{v}}=\set{\vectorlist{u}{t},\,\vect{v}}$ is a linearly independent set of $t+1$ vectors in $V$.  However, by hypothesis, $V$ has the same dimension as $U$ (namely $t$) and therefore <acroref type="theorem" acro="G" /> says that $C$ is too big to be linearly independent.  This contradiction shows that $U=V$.</p>
+<p>The hypothesis that $U\subseteq V$ allows for two cases.  Either $U\subsetneq V$ or $U=V$.</p>
+
+<p>If $U\subsetneq V$, then the hypotheses of <acroref type="theorem" acro="PSSD" /> are met and we have a contradiction to the hypothesis that $\dimension{U}=\dimension{V}$.</p>
+
+<p>Since the first case is impossible, the second case must always occur, which is our desired conclusion.</p>
 
 </proof>
 </theorem>
