@@ -1,6 +1,7 @@
 v X.XX
 ~~~~~~~~~~~~~~~~
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
+Edit: Theorem EDYES, substantially shorten proof
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
